@@ -30,6 +30,7 @@ Trunk (unreleased changes)
    HADOOP-2156 BufferUnderflowException for un-named HTableDescriptors
    HADOOP-2161 getRow() is orders of magnitudes slower than get(), even on rows
                with one column (Clint Morgan and Stack)
+   HADOOP-2040 Hudson hangs AFTER test has finished
 
   IMPROVEMENTS
     HADOOP-2401 Add convenience put method that takes writable
